--- a/legit.css
+++ b/legit.css
@@ -2,7 +2,7 @@ body {
   @import url('https://fonts.googleapis.com/css?family=New+Rocker|Ramabhadra');
   color: white;
   background-color: black;
-  font-family: 'New Rocker', cursive;
+  font-family: 'Ramahadra', sans-serif;
   font-size: 250%;
 }
 a {
